complete draft html content

--- a/index.html
+++ b/index.html
@@ -9,8 +9,29 @@
             <header>
                 <h1>Discover hidden places in the world around you</h1>
             </header>
+
             <main>
+                <!--download link-->
+                <a href="">Download Excursion (Coming soon!)</a>
+
+                <!--video display-->
+                <video src="Resources/Media/excursion.mp4">video not supported</video>
+
+                <!--description-->
+                <h1>Your personal travel guide</h1>
+                <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+                <!--image-->
+                <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="camp image">
+
+                <!--coming soon-->
+                <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="cellphone icon">
+                <h1>Coming Soon for iPhone and Android</h1>
                 <a href="">Download Excursion (Coming soon!)</a>
             </main>
+
+            <footer>
+                <p>&copy; Excursion</p>
+            </footer>
         </body>
     </html>
