complete draft css content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <title>Excursion</title>
             <meta charset="utf-8">
-            <link href="style.css" type="text/css" rel="stylesheet">
+            <link href="resources/CSS/style.css" type="text/css" rel="stylesheet">
         </head>
         <body>
             <header>
@@ -18,7 +18,7 @@
                 <video src="Resources/Media/excursion.mp4">video not supported</video>
 
                 <!--description-->
-                <h1>Your personal travel guide</h1>
+                <h2>Your personal travel guide</h2>
                 <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
                 <!--image-->
@@ -26,7 +26,7 @@
 
                 <!--coming soon-->
                 <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="cellphone icon">
-                <h1>Coming Soon for iPhone and Android</h1>
+                <h2>Coming Soon for iPhone and Android</h2>
                 <a href="">Download Excursion (Coming soon!)</a>
             </main>
 
