--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <main>
                 <!--download link-->
                 <a href="">Download Excursion (Coming soon!)</a>
+                <br>
+                <br>
 
                 <!--video display-->
-                <video src="Resources/Media/excursion.mp4">video not supported</video>
+                <video src="Resources/Media/excursion.mp4" autoplay>video not supported</video>
 
                 <!--description-->
                 <h2>Your personal travel guide</h2>
@@ -23,6 +25,8 @@
 
                 <!--image-->
                 <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="camp image">
+                <br>
+                <br>
 
                 <!--coming soon-->
                 <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="cellphone icon">
