--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p><a href="">Download Excursion (Coming soon!)</a></p>
                 
                 <!--video display-->
-                <video src="resources/Media/excursion.mp4" autoplay loop>video not supported</video>
+                <video src="resources/Media/excursion.mp4" type="video/mp4" autoplay loop>video not supported</video>
 
                 <!--description-->
                 <h2>Your personal travel guide</h2>
